--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,8 @@
   <mat-tab label="IP Address Range">
     <app-ip-address></app-ip-address>
   </mat-tab>
-  <mat-tab label="Excel Data Viewer"> Content 1 </mat-tab>
+  <mat-tab label="Excel Data Viewer">
+    <app-excel-viewer></app-excel-viewer>
+  </mat-tab>
 </mat-tab-group>
 <router-outlet></router-outlet>
